# UnionParser

./: AUTHORS  ChangeLog  LICENSE  README.md  __main__.py  main.py  out  paserproxy.py  requirements.txt  setup.cfg
test/: main.cpp  main.java  main.py  module.java  null  testClass.ast  testClass.cpp  testClass.hpp  testClass.hpp.gch
test/storage/Cxx/class BBB/: .declared  .record
test/storage/Cxx/class BBB/AAA inC_aaa/: .declared  .record
test/storage/Cxx/class BBB/BBB()/: .declared  .definitions
test/storage/Cxx/class BBB/char inC_ch/: .declared
test/storage/Cxx/class BBB/int inC_number/: .declared
test/storage/Cxx/class CCC/: .declared  .record
test/storage/Cxx/int gint/: .declared
test/storage/Cxx/namespace na1/: .declared
test/storage/Cxx/struct AAA/: .declared  .record  .reference
test/storage/Cxx/union un1/: .declared  .record
test/storage/Java/public class HelloWorld/: .definitions  .record
test/storage/Java/public class Module/: .definitions  .record
test/storage/Python/class Test/: .definitions  .record
test/storage/Python/class Test1/: .definitions  .record
test/storage/Python/class Test2/: .definitions  .record
test/storage/Python/globalFunc/: .definitions
test/storage/Python/globalFunc()/: .record
unionparser/: callproxy.py  cxxparser.py  globallog.py  javaparser.py  main.py  parser.py  pythonparser.py  syntaxtree.py
unionparser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
until/: callproxy.py  cxxparser.py  javaparser.py  parser.py  pythonparser.py
(+54 files in other folders)
