[metadata]
name = unionparser
version = 0.0.1
description-file = README.md
author = funning
author-email = 1305621613@qq.com
home-page = https://launchpad.net/pbr
license = MIT
classifier = https://github.com/FunningC0217/unionparser
    Intended Audience :: Developers
    Programming Language :: Python :: 3
keywords = language code parser

[files]
packages = until

extra_files = requirements.txt