[metadata]
name = unionparser
version = 0.0.1
description_file = README.md
author = funning
author_email = 1305621613@qq.com
home_page = https://github.com/FunningC0217/unionparser
license = MIT
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
keywords = language code parser

[files]
packages =
    unionparser = unionparser

extra_files = requirements.txt

[entry_points]
console_scripts =
    unionparser = unionparser.main:main